examples/pts/neg/variable.effekt
module examples/pts/neg/variable

def main() = {
    var value: _ = 1

    value = "t"
}